updated my name on the website (feel free to remove it since I'm not part of the group anymore, but since it's still there for now, I wanted to make sure it had my name correctly)

--- a/group.html
+++ b/group.html
@@ -151,7 +151,7 @@
                     <figure>
                     <img class="img-responsive center-block" src="pix/teampix/leaf.jpg" alt="">
                     <p class="lead">
-                        Noah Leaf '28</br>(she/her)
+                        Mia Leaf '28</br>(she/her)
                     </p>
                     </figure>
                 </div>
